# test-repo

./: .buildinfo  LICENSE.txt  README.md  example_project.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.doctrees/: environment.pickle  example_project.doctree  index.doctree  modules.doctree
.doctrees/notebooks/: example_notebook.doctree
.github/workflows/: docs.yml  documentation.yml  jekyll-gh-pages.yml
.spyproject/config/: workspace.ini
_modules/: index.html
_modules/example_project/: download_data.html  politeness_data.html
docs/: Makefile  conf.py  index.rst
docs/.github/workflows/: documentation.yml
docs/_build/: genindex.html  objects.inv  search.html  searchindex.js
docs/_build/.doctrees/: index.doctree
docs/_build/_sources/: index.rst
docs/_build/doctrees/: environment.pickle  example_project.doctree  index.doctree  (+1 more)
docs/output/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/source/: conf.py  example_project.rst  index.rst
doctrees/: environment.pickle  example_project.doctree  index.doctree
doctrees/notebooks/: example_notebook.doctree
example_project/: download_data.py
example_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
examples/: usage_example.py
html/: .buildinfo  example_project.html  genindex.html  modules.html  objects.inv  py-modindex.html  search.html
html/_modules/: index.html
html/notebooks/: example_notebook.html
notebooks/: example_notebook.html
(+52 files in other folders)
