[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "example_project"
version = "0.0.1"
requires-python = ">=3.6"
dependencies = ["matplotlib>=3.5.1",
                "numpy>=1.21.5",
                "pandas>=1.4.2",
                "polars==0.19.19",
                "Requests==2.31.0",
                "seaborn==0.11.2",
                "pathlib>=1.0",
                "pyarrow"]
                
[project.optional-dependencies]
dev = ["pytest ~= 7.1.2"]